fix: Skin: Fix tree twisty/image alignment on mac
(integrated from master branch change 58785c9 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/mac/window.less
+++ b/src/chrome/komodo/skin/plat/mac/window.less
@@ -28,3 +28,8 @@ statusbar#statusbarviewbox
 {
     background-image: none !important;
 }
+
+/* For some reason as of moz35 the tree images seem miss-aligned on mac (too much space in front) */
+treechildren::-moz-tree-twisty {
+    margin-right: -7px;
+}
